Correctly migrated to Ubuntu, two PHP libraries are missing, but everything else is in working order

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,6 +2,9 @@ worker_processes auto;
 error_log stderr warn;
 pid /run/nginx.pid;
 
+# Change user to allow access to PHP
+user www-data;
+
 events {
     worker_connections 1024;
 }
