--- a/config/conf.d/default.conf
+++ b/config/conf.d/default.conf
@@ -27,7 +27,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/run/php-fpm.sock;
+        fastcgi_pass unix:/run/php/php8.1-fpm.sock;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
@@ -52,6 +52,6 @@ server {
         deny all;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
-        fastcgi_pass unix:/run/php-fpm.sock;
+        fastcgi_pass unix:/run/php/php8.1-fpm.sock;
     }
 }
