--- a/config/fpm-pool.conf
+++ b/config/fpm-pool.conf
@@ -13,7 +13,15 @@ error_log = /dev/stderr
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = /run/php-fpm.sock
+listen = /run/php/php8.1-fpm.sock
+
+; Set permissions for unix socket, if one is used. In Linux, read/write
+; permissions must be set in order to allow connections from a web server.
+; Default Values: user and group are set as the running user
+;                 mode is set to 0660
+listen.owner = www-data
+listen.group = www-data
+listen.mode = 0660
 
 ; Enable status page
 pm.status_path = /fpm-status
