--- a/config/fpm-pool.conf
+++ b/config/fpm-pool.conf
@@ -19,8 +19,8 @@ listen = /run/php/php8.1-fpm.sock
 ; permissions must be set in order to allow connections from a web server.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-listen.owner = www-data
-listen.group = www-data
+listen.owner = nginx
+listen.group = nginx
 listen.mode = 0660
 
 ; Enable status page
